<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Activity Launcher</string>
    <string name="short_description">Launches hidden activities and creates shortcuts for installed apps</string>
    <string name="title_section_all">All activities</string>
    <string name="title_dialog_disclaimer">Disclaimer</string>
    <string name="title_dialog_icon_picker">Pick an icon</string>
    <string name="dialog_progress_loading">Loading…</string>
    <string name="dialog_disclaimer">Use this software at your own risk. Some apps might not behave as expected when their activities are launched in the wrong context leading to data loss or even worse. You have been warned. Do you understand this and still want to use this software?</string>
    <string name="context_action_launch">Launch activity</string>
    <string name="context_action_launch_as_root">Launch activity as root</string>
    <string name="context_action_shortcut">Create shortcut</string>
    <string name="context_action_shortcut_as_root">Create shortcut as root</string>
    <string name="context_action_edit">Edit shortcut</string>
    <string name="label_name">Name</string>
    <string name="label_package">Package</string>
    <string name="label_class">Class</string>
    <string name="label_icon">Icon</string>
    <string name="label_menu">Menu</string>
    <string name="label_private">private</string>
    <string name="label_as_root">As root</string>
    <string name="starting_activity">Starting activity: %s</string>
    <string name="starting_application">Starting application: %s</string>
    <string name="creating_activity_shortcut">Creating activity shortcut for %s</string>
    <string name="creating_application_shortcut">Creating application shortcut for %s</string>
    <string name="error">Error</string>
    <string name="error_tasks">Error loading task list</string>
    <string name="error_creating_shortcut">Error creating shortcut</string>
    <string name="error_icons">Error loading icons</string>
    <string name="error_invalid_icon_resource">Error: invalid icon resource</string>
    <string name="error_invalid_icon_format">Error: invalid icon format</string>
    <string name="error_no_default_activity">Package does not have a default activity - try to select one explicitly</string>
    <string name="error_verbose_pin_shortcut">Current launcher does not support "PinShortcut". Unable to create shortcut.</string>
    <string name="warning_root_check">Warning: Root privileges are probably not available on this device.</string>
    <string name="exception_invalid_component_name">Invalid or potentially harmful component name: %s</string>
    <string name="exception_command_error">Command returned error code: %d, output: %s</string>
    <string name="action_view_source">View source code</string>
    <string name="summary_action_view_source">The source code of this App is available for reading and modifying on GitHub. Feel free to send us pull requests with improvements and bugfixes.</string>
    <string name="action_view_translation">Help translate</string>
    <string name="summary_action_view_translation">If you are enjoying Activity Launcher, please consider translating the App into your language.</string>
    <string name="action_view_bugs">Report a problem</string>
    <string name="summary_action_view_bugs">Please submit your suggestions or issues on our GitHub project page.</string>
    <string name="action_filter">Filter&#8230;</string>
    <string name="filter_hint">package/action</string>
    <string name="activity_settings">Settings</string>
    <string name="settings_hide_private">Hide private activities</string>
    <string name="settings_summary_hide_private">Hide private (unexported and disabled) activities, that cannot be started without root access</string>
    <string name="settings_allow_root">Enable privileged mode</string>
    <string name="settings_summary_allow_root">Allow launching private activities by using root privileges</string>
    <string name="settings_language">Language</string>
    <string name="settings_theme">Theme</string>
    <string name="theme_default">System Default</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="label_data">Data</string>
    <string name="label_action">Action</string>
</resources>
