<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/activity_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="hide_private"
            android:title="@string/settings_hide_private"
            android:summary="@string/settings_summary_hide_private"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="allow_root"
            android:title="@string/settings_allow_root"
            android:summary="@string/settings_summary_allow_root"/>
        <ListPreference
            android:key="theme"
            android:title="@string/settings_theme"
            android:entries="@array/theme_settings"
            android:defaultValue="0"
            android:entryValues="@array/theme_settings_values"/>
        <ListPreference
            android:key="language"
            android:title="@string/settings_language"
            android:entryValues="@array/locales"
            android:defaultValue="0" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_title_about">
        <Preference
            android:key="action_view_source"
            android:title="@string/action_view_source"
            android:summary="@string/summary_action_view_source"
            app:singleLineTitle="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/url_source" />
        </Preference>

        <Preference
            android:key="action_view_translation"
            android:title="@string/action_view_translation"
            android:summary="@string/summary_action_view_translation"
            app:singleLineTitle="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/url_translation" />
        </Preference>
        <Preference
            android:key="action_view_bugs"
            android:title="@string/action_view_bugs"
            android:summary="@string/summary_action_view_bugs"
            app:singleLineTitle="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/url_bugs" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
