<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/action_filter"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_view_source"
        android:title="@string/action_view_source"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_translation"
        android:title="@string/action_view_translation"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_bugs"
        android:title="@string/action_view_bugs"
        app:showAsAction="never" />
</menu>
