<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp">

        <TableRow
            android:id="@+id/tableRow_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/editText_name"
                android:text="@string/label_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:importantForAutofill="no"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_package"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_package"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/editText_package"
                android:text="@string/label_package"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:id="@+id/editText_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:importantForAutofill="no"
                android:inputType="text">
                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/editText_class"
                android:text="@string/label_class"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:id="@+id/editText_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:importantForAutofill="no" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/editText_icon"
                android:text="@string/label_icon"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:id="@+id/editText_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="text"
                android:importantForAutofill="no" />
            <ImageButton
                android:id="@+id/iconButton"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="false"
                android:contentDescription="@string/title_dialog_icon_picker"
                android:src="@mipmap/ic_launcher" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow_as_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_as_root"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:labelFor="@+id/editText_name"
                android:text="@string/label_as_root"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <CheckBox
                android:id="@+id/checkBox_as_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical" />

        </TableRow>
    </TableLayout>
</LinearLayout>
